# MPEI-Thesis

./: README.md  docker-compose.yml
.github/workflows/: docker-image.yml  test-workflow.yml
media-backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
media-backend/app/: main.py
media-backend/app/database/: database.py  models.py  schemas.py  services.py
media-frontend/: Dockerfile  package-lock.json  package.json
media-frontend/public/: index.html
media-frontend/src/: App.jsx  index.js  setupProxy.js
media-frontend/src/components/: ErrorMessage.jsx  Header.jsx  Login.jsx  Register.jsx  Table.jsx  TrackInfoModal.jsx  UploadModal.jsx
media-frontend/src/context/: UserContext.jsx
